feat User API
